# FPTSnake

./: .gitignore  CMakeLists.txt  Makefile  build.bash
src/: charmath.h  main.cpp
src/menus/: firstsetup.cpp  firstsetup.h  keytest.cpp  keytest.h  mainmenu.cpp  mainmenu.h  selectgame.cpp  selectgame.h  settingmenu.cpp  settingmenu.h
src/namespace/: stg.cpp  stg.h  ui.cpp  ui.h
src/ui/: ui.cpp  ui.h
